[package]
name = "string_builder"
version = "0.1.0"
edition = "2021"
authors = ["Bob Hyman <bob.hyman@gmail.com"]
description = "A builder trait for String"
readme = "README.md"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
